--- a/style.css
+++ b/style.css
@@ -5,33 +5,35 @@
 
 
 .dropbtn{
-  background-color: green;
+  background-color: #acaa4a;
   color:white;
   padding: 16px;
-  margin: 16px;
   font-size: 16px;
   border: none;
   cursor: pointer;
-  width: 90%;
+  width:100%
 }
 
 .dropdown{
   position: relative;
   display: inline-block;
-  width: 100%;
+  width:100%;
   
 }
 
 .dropdown-content{
   display: none;
   position: absolute;
-  background-color: white;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
   width: 100%;
 }
 
 .dropdown-content a{
   color: black;
-  padding: 12px ;
+  padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
@@ -45,17 +47,15 @@
 }
 
 .dropdown:hover .dropbtn{
-  background-color: gold;
+  background-color: #3e8e41;
 }
 
 .input-area{
   width:100%;
-  border: 1px black solid;
- 
 }
 
 .input-area1 input{
   width: 100%;
-  border: 1px black solid; 
 }
 
+document.querySelectorAll("#from-currency-list a").forEach(menu=>)
